--- a/ProyectSoftware.Web/appsettings.json
+++ b/ProyectSoftware.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyConnection": "Server=DESKTOP-MD9H0UI\\SQLEXPRESS;Database=ProyectSDb;User Id=user2;Password=user123;encrypt=false;",
+    "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProyectSDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
